[package]
name = "gafpack"
version = "0.2.0"
edition = "2021"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
gfa = "0.10.1"
log = "0.4.21"
env_logger = "0.11.3"
